project(serload)
include_directories(../argparse ../CSerial)
link_directories(../argparse)
set(CMAKE_EXE_LINKER_FLAGS "-static")
add_executable(${PROJECT_NAME} ../argparse/argparse.c ../CSerial/c_serial.c serload.c)
if (UNIX)
    target_link_libraries(${PROJECT_NAME} m pthread)
endif (UNIX)
install(TARGETS ${PROJECT_NAME} DESTINATION host/bin)